--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifólio Renan J Paula</title>
+    <title>Portfólio José Nascimento</title>
+
+    <link rel="shortcut icon" href="./assets/img/favicon.svg" type="image/x-icon">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -15,57 +16,81 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 
-    <link rel="stylesheet" href="assets/css/global.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/acordeon.css">
-    <link rel="stylesheet" href="assets/css/languages.css">
-    <link rel="stylesheet" href="assets/css/portfolio.css">
-    <link rel="stylesheet" href="assets/css/experience.css">
-    <link rel="stylesheet" href="assets/css/skills.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/acordeon.css">
+    <link rel="stylesheet" href="/assets/css/languages.css">
+    <link rel="stylesheet" href="/assets/css/portfolio.css">
+    <link rel="stylesheet" href="/assets/css/certificate.css">
+    <link rel="stylesheet" href="/assets/css/skills.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+
 </head>
-
 <body>
-    <main class="main">
+    <main> 
         <header class="header">
-            <img src="assets/img/my-photo.png" alt="Foto de Perfil" class="photo" id="profile.photo">
+            <img src="/assets/img/profile.png" alt="Foto de perfil" style="border-radius: 50%;" class="profile">
 
-            <h1 class="title">
-                Olá, <br>eu sou <span id="profile.name">Carregando...</span>
-            </h1>
+            <h1 class="title">Olá, <br> eu sou o José Nascimento</h1>
 
             <div class="information">
-                <p class="job" id="profile.job">Carregando...</p>
-                <p class="location" id="profile.location">Carregando...</p>
+                <p class="job">
+                    Front-end Developer
+                </p>
+                <p class="location">
+                    Osasco - SP
+                </p>
                 <p class="phone">
-                    <a href="tel:(16) 9 9999-9999" id="profile.phone">Carregando...</a>
+                    <a href="https://api.whatsapp.com/send?phone=5511946308741" target="_blank">(11) 94630-8741</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com" id="profile.email">carregando@mail.com</a>
+                    <a href="mailto:Jose.clemerson1903@gmail.com" target="_blank">Jose.clemerson1903@gmail.com</a>
                 </p>
             </div>
         </header>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Skills</h2>
+                Skills
             </button>
-
             <div class="content">
                 <div class="skills">
                     <section class="tools">
-                        <h3>Ferramentas:</h3>
-                        <ul id="profile.skills.hardSkills">
-                        </ul>
+                    <h3>Habilidades Profissionais</h3>
+                    <ul>
+                            <li>
+                                <img src="/assets/img/icons/tools/JavaScript.png" alt="javaScript" title="JavaScript">
+                            </li>
+                            <li>
+                                <img src="/assets/img/icons/tools/HTML.png" alt="html" title="HTML">
+                            </li>
+                            <li>
+                                <img src="/assets/img/icons/tools/CSS.png" alt="css" title="CSS">
+                            </li>
+                            <li>
+                                <img src="/assets/img/icons/tools/Github.png" alt="github" title="Github">
+                            </li>
+                            <li>
+                                <img src="/assets/img/icons/tools/Git.png" alt="git" title="Git">
+                            </li>
+                            <li>
+                                <img src="/assets/img/icons/tools/VSCode.png" alt="vscode" title="Visual Code">
+                            </li>
+                    </ul>
                     </section>
 
                     <section class="personal">
-                        <h3>Pessoal:</h3>
-                        <ul id="profile.skills.softSkills">
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
-                            <li>Carregando...</li>
-                        </ul>
+                        <h3>Habilidades Pessoais</h3>
+                        <ul>
+                            <li>Comprometimento</li>
+                            <li>Resiliência</li>
+                            <li>Flexibilidade</li>
+                            <li>Dedicação</li>
+                            <li>Organização</li>
+                            <li>Trabalho em equipe</li>
+                            <li>Empatia</li>
+                            
+                    </ul>
                     </section>
                 </div>
             </div>
@@ -73,48 +98,86 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Idiomas</h2>
+                Idiomas
             </button>
-
             <div class="content">
-                <ul class="languages" id="profile.languages">
-                    <li>Carregando...</li>
+                <ul class="languages">
+                    <li>Português (BR)</li>
+                    <li>Inglês (Iniciante)</li>
                 </ul>
             </div>
         </section>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Portfólio</h2>
+                Portfólio
             </button>
-
             <div class="content">
-                <ul class="portfolio" id="profile.portfolio">
+                <ul class="portfolio">
+                    <li>
+                        <span class="title github">Criação de uma página de portfólio com HTML, CSS e JavaScript</span>
+                        <a href="https://github.com/jose-nascimento1/Portfolio"  target="_blank">https://github.com/jose-nascimento1/Portfolio</a>
+                    </li>
+                    <li>
+                        <span class="title github">Criação de uma interface baseada na Netflix com HTML, CSS e JavaScript</span>
+                        <a href="https://github.com/jose-nascimento1/AniFlix"  target="_blank">https://github.com/jose-nascimento1/AniFlix</a>
+                    </li>
+                    <li>
+                        <span class="title github">Criação de uma landing page com HTML e CSS</span>
+                        <a href="https://github.com/jose-nascimento1/Landing-Page-Instagram"  target="_blank">https://github.com/jose-nascimento1/Landing-Page-Instagram</a>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Experiência Profissional</h2>
+                Certificados
             </button>
-
             <div class="content">
-                <ul class="experience" id="profile.professionalExperience">
+                <ul class="certificate">
+                    <li>
+                        <span class="title">Formação Lógica de Programação</span>
+                        <span class="period">Novembro - 2023</span>
+                        <p>
+                            <a href="https://www.dio.me/certificate/F4DBDAB2/share"  target="_blank">Certificado</a>
+                        </p>
+                    </li>
+                    <li>
+                        <span class="title">Formação HTML Web Developer</span>
+                        <span class="period">Janeiro - 2023</span>
+                        <p>
+                            <a href="https://www.dio.me/certificate/3C52D48E/share"  target="_blank">Certificado</a>
+                        </p>
+                    </li>
+                    <li>
+                        <span class="title">Formação JavaScript Developer</span>
+                        <span class="period">Janeiro - 2023</span>
+                        <p>
+                            <a href="https://www.dio.me/certificate/D75CE7DD/share"  target="_blank">Certificado</a>
+                        </p>
+                    </li>
+                    <li>
+                        <span class="title">Bootcamp Grupo Carrefour Liderança Negra</span>
+                        <span class="period">Dezembro - 2022</span>
+                        <p>
+                            <a href="https://www.dio.me/certificate/52527C23/share"  target="_blank">Certificado</a>
+                        </p>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <footer>
-            <a href="https://www.dio.me/" target="_blank">
-                <img src="assets/img/dio.svg" alt="DIO">
+            <a href="https://github.com/jose-nascimento1" target="_blank">
+                <img src="/assets/img/github.svg" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/jose-nascimento1/" target="_blank">
+                <img src="/assets/img/linkedin.svg" alt="LinkedIn">
             </a>
         </footer>
     </main>
 
     <script src="assets/js/acordeon.js"></script>
-    <script src="assets/js/api.js"></script>
-    <script src="assets/js/main.js"></script>
 </body>
-
 </html>
